<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">WowService</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LOGIN</string>
    <string name="email">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="cpassword">Confirm password</string>
    <string name="submit">Submit</string>
    <string name="fp">Forgot Password?</string>
    <string name="account">No Account yet? Create by click here</string>

    <string name="title_activity_registration">Registration</string>
    <string name="or">OR</string>
    <string name="registration">REGISTRATION</string>
    <string name="fname">Enter First Name</string>
    <string name="mname">Enter Middle Name</string>
    <string name="lname">Enter Last Name</string>
    <string name="mno">Enter Mobile Number</string>

    <string name="ourservice">Our Services</string>
    <string name="services">Services</string>
    <string name="searchby">Search by Service name</string>

    <string name="title_activity_sub_type_fragment">SubTypeFragment</string>
    <string name="title_activity_sub_type_service">SubTypeServiceActivity</string>
    <string name="title_activity_sub_service_all">SubServiceAllActivity</string>
    <string name="title_activity_booking_fragment">BookingFragment</string>
    <string name="booknow">Book Now</string>

    <string name="title_activity_location">LocationActivity</string>
    <string name="currentloc">Current Location</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAHN2Dx0wM-VTiyFXpOnAciRubH5le878I</string>
    <string name="btnCurrent">Use Current Location</string>
    <string name="anotherloc">Another Location</string>
    <string name="searchanother">Search Location here</string>

    <string name="title_activity_date_time">DateTimeActivity</string>
    <string name="selectdate">Select Date For Service</string>
    <string name="selecttime">Select Time For Service</string>
    <string name="next">NEXT</string>

    <string name="title_activity_my_profile_fragment">MyProfileFragment</string>
    <string name="aboutus">About Us</string>
    <string name="contactus">Contact Us</string>
    <string name="shareus">Share</string>
    <string name="rateus">Rate Us</string>
    <string name="download">Download Partner App</string>
    <string name="logout">LOGOUT</string>

    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="title_activity_booking_type">BookingTypeActivity</string>
    <string name="title_activity_booking_history_fragment">BookingHistoryFragment</string>

    <string name="title_activity_preffered_service">PrefferedServiceActivity</string>
    <string name="relatedwork">Gallery</string>

    <string name="title_activity_service_package">ServicePackageActivity</string>
    <string name="selectpackage">Please select your package:</string>

    <string name="title_activity_membership">MembershipActivity</string>
    <string name="selectmembership">Select Membership Package: </string>

    <string name="title_activity_booking_detail">BookingDetailActivity</string>
    <string name="personaldetail">Personal Details</string>
    <string name="bookingdetail">Booking Details</string>

    <string name="address">Address</string>
    <string name="payment">Payment Detail</string>
    <string name="subtotal">Sub Total</string>
    <string name="extracharge">Extra charge</string>
    <string name="grandtotal">Grand Total</string>
    <string name="service">Service :\u0020</string>
    <string name="work">Work :\u0020</string>
    <string name="time">Time :\u0020</string>
    <string name="title_activity_forgot_password">ActivityForgotPassword</string>
    <string name="title_activity_verify_otp">VerifyOTPActivity</string>

    <string name="verify">Verify OTP</string>
    <string name="enterotp">Enter OTP</string>

    <string name="mybooking">My Bookings</string>
    <string name="orderid">Order Id :\u0020</string>
    <string name="nobooking">No Booking</string>
    <string name="booknewservice">You can book a new service</string>
    <string name="placingrequest">by placing a request now</string>

    <string name="fullname">Full Name</string>
    <string name="changemail">Change Email</string>
    <string name="changemobile">Change Mobile</string>
    <string name="changepass">Change Password</string>
    <string name="update">Update</string>

</resources>
