<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:com.example.serviceprovider.app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_35sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:padding="@dimen/_8sdp"
            com.example.serviceprovider.app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="activity.authentication.RegistrationActivity"
            tools:showIn="@layout/activity_registration">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                fontPath="font/TxtBold.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15sdp"
                android:text="@string/registration"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_17sdp">
            </androidx.appcompat.widget.AppCompatTextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:theme="@style/TextInputLayoutAppearance"
                com.example.serviceprovider.app:errorEnabled="true"
                com.example.serviceprovider.app:errorTextAppearance="@style/error_appearance">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fname2"
                    style="@style/EditTextBaseStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fname"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fname"
                android:theme="@style/TextInputLayoutAppearance"
                com.example.serviceprovider.app:errorEnabled="true"
                com.example.serviceprovider.app:errorTextAppearance="@style/error_appearance">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lname2"
                    style="@style/EditTextBaseStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lname"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                style="@style/error_appearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lname"
                android:theme="@style/TextInputLayoutAppearance"
                com.example.serviceprovider.app:errorEnabled="true"
                com.example.serviceprovider.app:errorTextAppearance="@style/error_appearance">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email2"
                    style="@style/EditTextBaseStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:theme="@style/TextInputLayoutAppearance"
                com.example.serviceprovider.app:errorEnabled="true"
                com.example.serviceprovider.app:errorTextAppearance="@style/error_appearance">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mobile2"
                    style="@style/EditTextBaseStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mno"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mobile"
                android:theme="@style/TextInputLayoutAppearance"
                com.example.serviceprovider.app:errorEnabled="true"
                com.example.serviceprovider.app:errorTextAppearance="@style/error_appearance"
                com.example.serviceprovider.app:passwordToggleEnabled="true"
                com.example.serviceprovider.app:passwordToggleTint="@color/white">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pass2"
                    style="@style/EditTextBaseStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pass"
                android:theme="@style/TextInputLayoutAppearance"
                com.example.serviceprovider.app:errorEnabled="true"
                com.example.serviceprovider.app:errorTextAppearance="@style/error_appearance"
                com.example.serviceprovider.app:passwordToggleEnabled="true"
                com.example.serviceprovider.app:passwordToggleTint="@color/white">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cpass2"
                    style="@style/EditTextBaseStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cpassword"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cpass"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@color/transwhite"
                android:text="@string/submit"
                android:textColor="@color/white" />

        </RelativeLayout>
    </ScrollView>

</layout>